feat(match/toss): show caller’s chosen face pre-toss, keep outcome fair (50/50), fix winner logic, park coin on outcome, lock after one toss, and match lineups background with transparent coin area

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,9 +2,12 @@
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
     "strict": true,
+    "jsx": "react-jsx",
+    "types": ["react", "react-native", "react-native-svg"],
     "paths": {
       "@/*": ["./*"]
-    }
+    },
+    "skipLibCheck": true
   },
   "include": [
     "**/*.ts",
