--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "@react-navigation/native": "^7.1.8",
     "expo": "~54.0.9",
     "expo-constants": "~18.0.9",
+    "expo-file-system": "~19.0.15",
     "expo-font": "~14.0.8",
     "expo-haptics": "~15.0.7",
     "expo-linear-gradient": "~15.0.7",
     "expo-linking": "~8.0.8",
+    "expo-print": "~15.0.7",
     "expo-router": "~6.0.7",
+    "expo-sharing": "~14.0.7",
     "expo-splash-screen": "~31.0.10",
     "expo-status-bar": "~3.0.8",
     "expo-web-browser": "~15.0.7",
@@ -37,6 +40,7 @@
   "devDependencies": {
     "@types/react": "~19.1.0",
     "@types/react-native": "^0.72.8",
+    "expo-module-scripts": "^5.0.7",
     "react-test-renderer": "19.1.0",
     "typescript": "~5.9.2"
   },
