--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
   "expo": {
     "name": "cricledger",
     "slug": "cricledger",
-    "version": "1.0.0",
+    "version": "1.0.1",            
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
     "scheme": "cricledger",
@@ -13,29 +13,21 @@
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
-    "ios": {
-      "supportsTablet": true
-    },
+    "ios": { "supportsTablet": true },
     "android": {
+      "versionCode": 2,            
       "adaptiveIcon": {
-        "foregroundImage": "./assets/images/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
+        "foregroundImage": "./assets/images/adaptive-foreground.png",
+        "backgroundColor": "#0B1220"
       },
       "edgeToEdgeEnabled": true,
       "predictiveBackGestureEnabled": false,
       "softwareKeyboardLayoutMode": "resize",
       "package": "com.khan484.cricledger"
     },
-    "web": {
-      "bundler": "metro",
-      "output": "static",
-      "favicon": "./assets/images/favicon.png"
-    },
-    "plugins": [
-      "expo-router"
-    ],
-    "experiments": {
-      "typedRoutes": true
-    }
+    "web": { "bundler": "metro", "output": "static", "favicon": "./assets/images/favicon.png" },
+    "plugins": ["expo-router"],
+    "experiments": { "typedRoutes": true },
+    "extra": { "router": {}, "eas": { "projectId": "c250fd1f-0ac2-404d-a471-45d4baf5b155" } }
   }
 }
